# breathe

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: air_quality.py  health.py
app/core/: config.py  dependencies.py  exceptions.py
app/db/: database.py  models.py  repository.py
app/schemas/: air_quality.py
app/services/: advisory.py  aqi_calculator.py  cache.py  owm_client.py
tests/: conftest.py  test_aqi_calculator.py
web/: .dockerignore  .env.example  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
web/assets/css/: main.css
web/components/: AdvisoryPanel.vue  AqiGauge.vue  ForecastChart.vue  PollutantGrid.vue  SafetyScore.vue  WeatherWidget.vue
web/composables/: useBreatheApi.ts
web/pages/: [city].vue  index.vue
web/types/: index.ts
